--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -22,7 +22,7 @@ HOW (detectors): This challenging program brings special requirements for the de
 
 \> describe the RP system
 \>> motivation: very small angles -- need move close to the beam and detectors far from the IP
-\>> break down with pictures, few info about the sensors
+\>> break down with pictures, few info about the sensors, define hybrid
 \>> define the standard naming: \bref{totem-rp-naming}
 
 \tab[\strut\quad#\quad\hfil&\quad#\quad\hfil&\quad#\quad\hfil\cr]{rp naming schemes}{RP system naming schemes}{\ln
