collimation alignment updated
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@4729 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -23,14 +23,14 @@ HOW (detectors): This challenging program brings special requirements for the de
 \> describe the RP system
 \>> motivation: very small angles -- need move close to the beam and detectors far from the IP
 \>> break down with pictures, few info about the sensors, define hybrid
+\>> introduce (with pictures BPMs, BLMs, LVDTs)
 \>> define the standard naming: \bref{totem-rp-naming}
 
-\tab[\strut\quad#\quad\hfil&\quad#\quad\hfil&\quad#\quad\hfil\cr]{rp naming schemes}{RP system naming schemes}{\ln
+\tab[\strut\quad#\quad\hfil&\quad#\quad\hfil&\quad#\quad\hfil\cr]{rp naming schemes}{The RP naming scheme.}{\ln
 arm		& 45 (=left), 56 (=right)		\cr
 station	& 147, 220		\cr
 unit	& far, near		\cr
-pot		& top, bot, hor	\cr
-		& 				\cr
+pot		& top, bot = bottom, hor = horizontal	\cr
 plane	& 1 to 10		\cr
 vfat	& 1 to 4		\cr
 strip	& 0 to 127		\cr
@@ -58,10 +58,7 @@ In 56, top pots, V sensors shifted in x by +0.514mm, U sensors by -0.514mm.
 \> define u, v (the system rotating with sensor) and U, V (45 deg. rotation of about s of the xys system), strips along u, read-out direction is v
 \TODO{make sure this is used everywhere}
 
-
-\>> mention BPMs and BLMs
-
-
+\> RP approach -- typical $10\si$, define beam sigma!
 
 
 \iffalse
