--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -1004,3 +1004,14 @@
       year         = "1990",
 	  ISBN="0-19-859680-4"
 }
+
+@book{bock,
+      author       = "Bock, R. K. and Grote, H and Notz, D and Regler,
+                      Meinhard",
+      title        = "Data-analysis techniques for high-energy physics
+                      experiments; 2nd ed.",
+      publisher    = "Cambridge Univ. Press",
+      address      = "Cambridge",
+      year         = "1990"
+		ISBN	   = "0-521-63548-9"
+}
